name:                time-warp
version:             1.1.0.0
synopsis:            distributed systems execution emulation
homepage:            http://gitlab.serokell.io/serokell-team/time-warp
license:             GPL-3
license-file:        LICENSE
author:              Serokell team
maintainer:          Ivanov Kostia <martoon.391@gmail.com>
copyright:           Serokell
build-type:          Simple
cabal-version:       >=1.18
description:
    This package allows to write scenarious over distributed systems, which can
    be launched as either real program or fast emulation without need to wait
    for delays and with network nastiness manually controlled.

library
  exposed-modules:     Control.TimeWarp.Rpc
                     , Control.TimeWarp.Rpc.Message
                     , Control.TimeWarp.Rpc.MonadDialog
                     , Control.TimeWarp.Rpc.MonadTransfer
--                     , Control.TimeWarp.Rpc.MonadRpc
--                     , Control.TimeWarp.Rpc.Rpc
--                     , Control.TimeWarp.Rpc.TH
                     , Control.TimeWarp.Rpc.Transfer

                     , Control.TimeWarp.Timed
                     , Control.TimeWarp.Timed.MonadTimed
                     , Control.TimeWarp.Timed.Misc
                     , Control.TimeWarp.Timed.TimedIO
                     , Control.TimeWarp.Timed.TimedT
  build-depends:       aeson
                     , base == 4.*
                     , binary >= 0.8.3
                     , binary-conduit >= 1.2.4.1
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6
                     , conduit-extra >= 1.1
                     , containers
                     , data-default
                     , deepseq >= 1.4.1
                     , exceptions
                     , extra
                     , formatting
                     , lens
                     , lifted-base >= 0.2.3
                     , log-warper  >= 0.1.0
                     , mtl
                     , MonadRandom
                     , monad-loops
                     , monad-control
                     , mmorph >= 1.0
                     , data-msgpack >= 0.0.8
                     , network >= 2.6
                     , pqueue
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , random >= 1.1
                     , safe
                     , serokell-util
                     , semigroups
                     , slave-thread >= 1.0
                     , stm >= 2.4.4
                     , stm-chans >= 3.0.0
                     , stm-conduit >= 3.0
                     , streaming-commons >= 0.1.15
                     , template-haskell
                     , text >= 1.2.2.0
                     , text-format
                     , time
                     , time-units >= 1.0.0
                     , transformers >= 0.4.2.0
                     , transformers-base

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fprint-potential-instances

  default-extensions:  RecordWildCards
                       OverloadedStrings
                       DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving

test-suite time-warp-test
  main-is:             Test.hs
  other-modules:       Test.Control.TimeWarp.Timed.ExceptionSpec
                     , Test.Control.TimeWarp.Timed.MonadTimedSpec

                     , Test.Control.TimeWarp.Common

                     , Spec
  type:                exitcode-stdio-1.0
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , data-default
                     , exceptions >= 0.8.2.1
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , log-warper >= 0.1.0
                     , data-msgpack >= 0.0.8
                     , mtl
                     , QuickCheck >= 2.8.1
                     , serokell-util
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , random >= 1.1
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable playground
  main-is:             Main.hs
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , binary-conduit >= 1.2.4.1
                     , conduit >= 1.2.6
                     , data-default
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , log-warper >= 0.1.0
                     , MonadRandom
                     , data-msgpack >= 0.0.8
                     , mtl
                     , QuickCheck >= 2.8.1
                     , serokell-util
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , random >= 1.1
  hs-source-dirs:      examples/playground
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
