name:                time-warp
version:             1.1.0.0
synopsis:            distributed systems execution emulation
homepage:            http://gitlab.serokell.io/serokell-team/time-warp
license:             GPL-3
license-file:        LICENSE
author:              Serokell team
maintainer:          Ivanov Kostia <martoon.391@gmail.com>
copyright:           Serokell
build-type:          Simple
cabal-version:       >=1.18
description:
    This package allows to write scenarious over distributed systems, which can
    be launched as either real program or fast emulation without need to wait
    for delays and with network nastiness manually controlled.

library
  exposed-modules:     Control.TimeWarp.Rpc
                     , Control.TimeWarp.Rpc.Message
                     , Control.TimeWarp.Rpc.MonadDialog
                     , Control.TimeWarp.Rpc.MonadTransfer
--                     , Control.TimeWarp.Rpc.MonadRpc
--                     , Control.TimeWarp.Rpc.Rpc
--                     , Control.TimeWarp.Rpc.TH
                     , Control.TimeWarp.Rpc.Transfer

                     , Control.TimeWarp.Timed
                     , Control.TimeWarp.Timed.MonadTimed
                     , Control.TimeWarp.Timed.Misc
                     , Control.TimeWarp.Timed.TimedIO
                     , Control.TimeWarp.Timed.TimedT
  build-depends:       aeson
                     , ansi-terminal
                     , array
                     , base == 4.*
                     , binary >= 0.8.3
                     , binary-conduit >= 1.2.4.1
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.6
                     , conduit-extra >= 1.1
                     , containers
                     , data-default
                     , deepseq >= 1.4.1
                     , exceptions
                     , extra
                     , formatting
                     , lens
                     , lifted-base >= 0.2.3
                     , log-warper  >= 0.1.0
                     , mtl
                     , MonadRandom
                     , monad-loops
                     , monad-control
                     , mmorph >= 1.0
                     , data-msgpack >= 0.0.8
                     , network >= 2.6
                     , attoparsec >= 0.13
                     , pqueue
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , random >= 1.1
                     , regex-tdfa >= 1.2.2
                     , safe
                     , serokell-util
                     , semigroups
                     , slave-thread >= 1.0
                     , stm >= 2.4.4
                     , stm-chans >= 3.0.0
                     , stm-conduit >= 3.0
                     , streaming-commons >= 0.1.15
                     , template-haskell
                     , text >= 1.2.2.0
                     , text-format
                     , time
                     , time-units >= 1.0.0
                     , transformers >= 0.4.2.0
                     , transformers-base
                     , unordered-containers >= 0.2.7

  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fprint-potential-instances

  default-extensions:  RecordWildCards
                       OverloadedStrings
                       DeriveDataTypeable
                       DeriveGeneric
                       GeneralizedNewtypeDeriving

test-suite time-warp-test
  main-is:             Test.hs
  other-modules:       Test.Control.TimeWarp.Timed.ExceptionSpec
                     , Test.Control.TimeWarp.Timed.MonadTimedSpec

                     , Test.Control.TimeWarp.Common

                     , Spec
  type:                exitcode-stdio-1.0
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , data-default
                     , exceptions >= 0.8.2.1
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , log-warper >= 0.1.0
                     , data-msgpack >= 0.0.8
                     , mtl
                     , QuickCheck >= 2.8.1
                     , serokell-util
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , random >= 1.1
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable playground
  main-is:             Main.hs
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , binary-conduit >= 1.2.4.1
                     , conduit >= 1.2.6
                     , data-default
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , log-warper >= 0.1.0
                     , MonadRandom
                     , data-msgpack >= 0.0.8
                     , mtl
                     , QuickCheck >= 2.8.1
                     , serokell-util
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , random >= 1.1
  hs-source-dirs:      examples/playground
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-sender
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       SenderOptions
  build-depends:       async >= 2.1
                     , attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , data-default >= 0.7
                     , data-msgpack >= 0.0.8
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , extra >= 1.4
                     , formatting
                     , hslogger
                     , log-warper
                     , monad-control >= 1.0.1
                     , mtl
                     , optparse-simple >= 0.0.3
                     , serokell-util
                     , random >= 1.1
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.5.2
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/Sender
                     , bench/Network/Common
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-receiver
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       ReceiverOptions
  build-depends:       attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , data-default >= 0.7
                     , data-msgpack >= 0.0.8
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hslogger
                     , log-warper
                     , mtl
                     , optparse-simple >= 0.0.3
                     , serokell-util
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , time-warp
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/Receiver
                     , bench/Network/Common
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable bench-log-reader
  main-is:             Main.hs
  other-modules:       Bench.Network.Commons
                       LogReaderOptions
  build-depends:       attoparsec >= 0.13.1
                     , base == 4.*
                     , binary >= 0.8.3
                     , bytestring >= 0.10.6.0
                     , conduit >= 1.2.7
                     , conduit-extra >= 1.1.13
                     , containers >= 0.5.7
                     , data-default >= 0.7
                     , data-msgpack >= 0.0.8
                     , directory >= 1.2.6
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hslogger
                     , log-warper
                     , lens >= 4.14
                     , mtl
                     , optparse-simple >= 0.0.3
                     , resourcet >= 1.1.7
                     , text >= 1.2.2
                     , text-format >= 0.3.1
                     , time >= 1.6
                     , time-units >= 1.0.0
                     , time-warp
                     , unordered-containers >= 0.2.7
  hs-source-dirs:      bench/Network/LogReader
                     , bench/Network/Common
  default-language:    Haskell2010
  ghc-options:         -threaded -Wall
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
