name:                time-warp
version:             0.6.0.1
synopsis:            distributed systems execution emulation
homepage:            http://gitlab.serokell.io/serokell-team/time-warp
license:             GPL-3
license-file:        LICENSE
author:              Serokell team
maintainer:          Ivanov Kostia <martoon.391@gmail.com>
copyright:           Serokell
build-type:          Simple
cabal-version:       >=1.18
description:
    This package allows to write scenarious over distributed systems, which can
    be launched as either real program or fast emulation without need to wait
    for delays and with network nastiness manually controlled.

library
  exposed-modules:     Control.TimeWarp.Logging

                     , Control.TimeWarp.Rpc
                     , Control.TimeWarp.Rpc.Delays
                     , Control.TimeWarp.Rpc.ExtOpts
                     , Control.TimeWarp.Rpc.MonadRpc
                     , Control.TimeWarp.Rpc.MsgPackRpc
                     , Control.TimeWarp.Rpc.MsgPackUdp
                     , Control.TimeWarp.Rpc.PureRpc
                     , Control.TimeWarp.Rpc.TH

                     , Control.TimeWarp.Timed
                     , Control.TimeWarp.Timed.MonadTimed
                     , Control.TimeWarp.Timed.Misc
                     , Control.TimeWarp.Timed.TimedIO
                     , Control.TimeWarp.Timed.TimedT
  build-depends:       ansi-terminal
                     , base == 4.*
                     , binary
                     , binary-conduit >= 1.2.4.1
                     , bytestring >= 0.10.6.0
                     , containers
                     , constraints
                     , data-default
                     , exceptions
                     , formatting
                     , hslogger
                     , lens
                     , lifted-base >= 0.2.3
                     , mtl
                     , MonadRandom
                     , monad-loops
                     , monad-control
                     , msgpack >= 1.0.0
                     , msgpack-rpc >= 1.0.0
                     , network
                     , pqueue
                     , QuickCheck >= 2.8.1
                     , quickcheck-instances
                     , random >= 1.1
                     , safe
                     , stm >= 2.4.4
                     , template-haskell
                     , text >= 1.2.2.0
                     , text-format
                     , time
                     , time-units >= 1.0.0
                     , transformers >= 0.4.2.0
                     , transformers-base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , ViewPatterns
                     , TypeApplications
                     , ScopedTypeVariables
                     , DefaultSignatures
                     , LambdaCase
                     , StandaloneDeriving

test-suite time-warp-test
  main-is:             Test.hs
  other-modules:       Test.Control.TimeWarp.Rpc.MonadRpcSpec

                     , Test.Control.TimeWarp.Timed.ExceptionSpec
                     , Test.Control.TimeWarp.Timed.MonadTimedSpec

                     , Test.Control.TimeWarp.Common

                     , Spec
  type:                exitcode-stdio-1.0
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , data-default
                     , exceptions >= 0.8.2.1
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , msgpack >= 1.0.0
                     , mtl
                     , QuickCheck >= 2.8.1
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , msgpack-rpc >= 1.0.0
                     , random >= 1.1
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-TN -Wall
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

executable playground
  main-is:             Main.hs
  build-depends:       async >= 2.0.1
                     , base == 4.*
                     , data-default
                     , exceptions >= 0.8.2.1
                     , formatting
                     , hspec >= 2.1.10
                     , lens >= 4.13
                     , MonadRandom
                     , msgpack >= 1.0.0
                     , mtl
                     , QuickCheck >= 2.8.1
                     , stm >= 2.4.4.1
                     , text >= 1.2.2.0
                     , text-format
                     , time-units >= 1.0.0
                     , time-warp
                     , transformers >= 0.4.2.0
                     , msgpack-rpc >= 1.0.0
                     , random >= 1.1
  hs-source-dirs:      examples/playground
  default-language:    Haskell2010  
  ghc-options:         -threaded -rtsopts -with-rtsopts=-TN -Wall -fno-warn-orphans
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving

benchmark time-warp-benchmark
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      bench
  main-is:             Main.hs
  other-modules:       Scenarios
  build-depends:       base == 4.*
                     , time-warp
                     , deepseq
                     , exceptions
                     , gauge
                     , lens
                     , lifted-base
                     , monad-control
                     , msgpack
                     , mtl
                     , transformers-base
  default-extensions:  RecordWildCards
                     , OverloadedStrings
                     , DeriveDataTypeable
                     , GeneralizedNewtypeDeriving
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , ViewPatterns
                     , TypeApplications
                     , ScopedTypeVariables
                     , DefaultSignatures
                     , LambdaCase
                     , StandaloneDeriving

